<resources>
    <string name="app_name">My Application</string>
    <string name="activity_main_title">Places Search</string>
    <string name="text_view_keyword">Keyword</string>
    <string name="edit_text_keyword">Enter keyword</string>
    <string name="text_view_category">Category</string>
    <string name="text_view_distance">Distance (in miles)</string>
    <string name="text_view_from">From</string>
    <string name="text_view_prompt">Please enter mandatory field</string>
    <string name="radio_button_1">Current location</string>
    <string name="radio_button_2">Other. Specify Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
